--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
     <script defer src="./js/script.js"></script>
-    <title>Tic tac Toe</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <header>
         <h1>Tic Tac Toe</h1>
         <h2 id="message">It's Player X's Turn</h2>
-    </header>  
+    </header>
     <main>
-        <section id="gameboard"></section>
-        <div class="square">x</div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square">O</div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <section id="gameboard">
+            <div class="square bottom">X</div>
+            <div class="square bottom right left"></div>
+            <div class="square bottom"></div>
+            <div class="square"></div>
+            <div class="square right left">O</div>
+            <div class="square"></div>
+            <div class="square top"></div>
+            <div class="square top right left"></div>
+            <div class="square top"></div>
+        </section>
         <section>
             <button id="reset-btn">Reset</button>
         </section>
-
     </main>
     <footer>
         <p>Copyright &copy; 2020 All Rights Reserved</p>
